Project

General

Profile

Actions

Bug #50047

closed

cephContext: ceph-conf crash when CrushLocation construct

Added by Alex Wu about 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
common
Target version:
% Done:

0%

Source:
Tags:
Backport:
nautilus, octopus, pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph-conf core dump when using vstart.sh

#0 __GI___pthread_mutex_lock (mutex=0x38) at ../nptl/pthread_mutex_lock.c:65
#1 0x00007fea43d76275 in __gthread_mutex_lock (__mutex=0x38) at /opt/rh/devtoolset-7/root/usr/include/c++/7/x86_64-redhat-linux/bits/gthr-default.h:748
#2 0x00007fea43d79444 in std::mutex::lock (this=0x38) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/std_mutex.h:103
#3 0x00007fea43dd38ff in std::unique_lockstd::mutex::lock (this=0x7ffe60eb9d40) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/std_mutex.h:267
#4 0x00007fea43dd3146 in std::unique_lockstd::mutex::unique_lock (this=0x7ffe60eb9d40, __m=...) at /opt/rh/devtoolset-7/root/usr/include/c++/7/bits/std_mutex.h:197
#5 0x00007fea4424c5ed in ceph::logging::Log::submit_entry (this=0x0, e=...) at ./ceph/src/log/Log.cc:180
#6 0x00007fea44627f4f in CrushLocation::init_on_startup (this=0x55ad5a5a72e8) at ./ceph/src/crush/CrushLocation.cc:122
#7 0x00007fea43e53674 in CrushLocation::CrushLocation (this=0x55ad5a5a72e8, c=0x55ad5a5a4c80) at ./ceph/src/crush/CrushLocation.h:22
#8 0x00007fea43e4ce6c in CephContext::CephContext (this=0x55ad5a5a4c80, module_type_=8, code_env=CODE_ENVIRONMENT_DAEMON, init_flags_=40) at ./ceph/src/common/ceph_context.cc:639
#9 0x00007fea43eadeef in common_preinit (iparams=..., code_env=CODE_ENVIRONMENT_DAEMON, flags=40) at ./ceph/src/common/common_init.cc:40
#10 0x000055ad5a0bda6d in global_pre_init (defaults=0x0, args=std::vector of length 2, capacity 4 = {...}, module_type=8, code_env=CODE_ENVIRONMENT_DAEMON, flags=40) at ./ceph/src/global/global_init.cc:100

Related issues 3 (0 open3 closed)

Copied to Ceph - Backport #50120: octopus: cephContext: ceph-conf crash when CrushLocation constructResolvedNathan CutlerActions
Copied to Ceph - Backport #50121: pacific: cephContext: ceph-conf crash when CrushLocation constructResolvedsinguliere _Actions
Copied to Ceph - Backport #50122: nautilus: cephContext: ceph-conf crash when CrushLocation constructResolvedNathan CutlerActions
Actions #1

Updated by Kefu Chai about 3 years ago

  • Status changed from New to Fix Under Review
  • Backport set to nautilus, octopus, pacific
  • Pull request ID set to 40457
Actions #2

Updated by Kefu Chai about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50120: octopus: cephContext: ceph-conf crash when CrushLocation construct added
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50121: pacific: cephContext: ceph-conf crash when CrushLocation construct added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #50122: nautilus: cephContext: ceph-conf crash when CrushLocation construct added
Actions #6

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF