crush/CrushLocation: do not print logging message in constructor

do not use logging facility in constructor, as CephContext::_log is set
after CephContext::crush_location is created in constructor of CephContext.

Fixes: https://tracker.ceph.com/issues/50047
Signed-off-by: Alex Wu <notmycupoftea@163.com>